api: notify/withdrawinfo
